Fixed divs overlapping in Home, other minor fixes

--- a/Code/Banking_System_RIA/src/main/webapp/CSS/home.css
+++ b/Code/Banking_System_RIA/src/main/webapp/CSS/home.css
@@ -17,7 +17,8 @@
 .sidebar {
 	background-color: #50514F;
 	color: #FFFFFF;
-	height: 100vh;
+	position: relative;
+	max-height: 100%;
   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 body {
@@ -39,7 +40,7 @@ body {
 }
 .accounts_list {
 	width: 100%;
-	height: 50%;
+	height: 38vh;
 	padding: 3%;
 	background-color: #50514F;
 }
@@ -94,7 +95,7 @@ body {
 .account_data {
 	height: 100vh;
 	width: 100%;
-	padding: 7%;
+	padding: 5%;
 }
 .account_info {
 	width: 100%;
@@ -151,4 +152,13 @@ body {
 .center_data {
 	text-align: center;
 	width: 100%;
+}
+.transfer_box {
+  position:absolute;
+  top:0px;
+  right:0px;
+  bottom:0px;
+  left:0px;
+	background-color: black;
+	opacity: 0.4;
 }
